       Closes: #155904

     - debian/patches/glibc22-hppa-fcntl.dpatch: added, patched by
       Carlos O'Donell <carlos@baldric.uwo.ca>.

  * Ben Collins <bcollins@debian.org>
    - Make sparc64 build use gcc-3.2.
    - Update all config options to not use --disable-sanity-checks, since we
      are actually using gcc-3.2 for everything.
    - Patch cleanups.

  * XXX Below here was during the 2.2.92 development, and never released.

  * Jeff Bailey <jbailey@nisa.net>
     - Upgrade tarballs to 2.2.92
     - version: Update to 2.2.92
     - debian/control.in/main: Require gcc-3.2 for all archs
     - debian/patches/0list: prune glibc-cvs, glibc22-s390-resource,
       gmon-start, locales-de_CH, sh-sysdep, alpha-build-failure

       These are already included in the 2.3 series.

     - debian/patches/glibc22-misc.dpatch: Split into ...
       debian/patches/makeconfig.dpatch: ... this
       debian/patches/locale-es_AR.dpatch: ... and this
       debian/patches/i386-mathinline.dpatch: ... and this
       debian/patches/ldconfig.dpatch: ... and this.

     - debian/patches/makeconfig.dpatch: Update for 2.3 series

     - debian/patches/0list: Temporarily disable some other patches:

       glibc22-hppa-pthreads, glibc22-hppa-rela, ia64-perf

     - debian/rules: memset.S works on ppc now, so stop deleting it.  Thanks 
       to Jack Howarth <howarth@fuse.net> for letting us know.

     - debian/sysdeps/gnu.mk: Remove --enable-libio, now set by default.  Add
       NO_TEST = yes, make check does not run on i386-gnu.

     - debian/sysdeps/tools.mk: Hardcode gcc-3.2 for $(CC) and $(BUILD_CC)
       until gcc-defaults switches.

     - debian/rules: use CC=$(CC) when calling configure to get any changed
       definitions.

     - debian/control.in/main: Require binutils (>= 2.13.90.0.4-1)

     - debian/rules: Add time/date stamps to beginning and end of log files

     - db1-addon-2.1.3.tar.bz2: Delete

     - debian/ppc-memset.S: Delete
