@@ -9,10 +9,4 @@ if [ "$1" = remove ]; then
     if command -v install-docs >/dev/null 2>&1; then
 	install-docs -r glibc-manual >/dev/null 2>&1
     fi
-    if [ -d /usr/doc ]; then
-	package=$(basename $0 .prerm)
-	if [ -L /usr/doc/$package ]; then
-	    rm /usr/doc/$package ;
-	fi
-    fi
 fi
