@@ -4,14 +4,12 @@ if [ "$1" = "configure" ]
 then
     ldconfig
 
-    if [ -d /usr/doc ]; then
-        package=`basename $0 .postinst`
-        if [ ! -e /usr/doc/$package ]; then
-            (cd /usr/doc;
-                if [ -d ../share/doc/$package ]; then
-                    ln -s ../share/doc/$package $package ;
-                fi
-            )
-        fi
+    package=`basename $0 .postinst`
+    opt=`echo $package | sed 's/.*-//'`
+
+    if [ -f /etc/ld.so.nohwcap ]; then
+        grep -v $opt /etc/ld.so.nohwcap > /etc/ld.so.nohwcap.tmp
+        mv /etc/ld.so.nohwcap.tmp /etc/ld.so.nohwcap
+        test -s /etc/ld.so.nohwcap || rm -f /etc/ld.so.nohwcap
     fi
 fi
