@@ -5,17 +5,6 @@ LG="/etc/locale.gen"
 
 if [ "$1" = configure ]; then
 
-    if [ -d /usr/doc ]; then
-	package=$(basename $0 .postinst)
-	if [ ! -e /usr/doc/$package ]; then
-	    (cd /usr/doc;
-		if [ -d ../share/doc/$package ]; then
-		    ln -s ../share/doc/$package $package ;
-		fi
-            )
-	fi
-    fi
-
     . /usr/share/debconf/confmodule
     db_version 2.0
 
