@@ -2,12 +2,3 @@
 set -e
 
 /etc/init.d/nscd stop || true
-
-if [ $1 = remove ]; then
-    if [ -d /usr/doc ]; then
-	package=$(basename $0 .prerm)
-	if [ -L /usr/doc/$package ]; then
-	    rm /usr/doc/$package
-	fi
-    fi
-fi
