@@ -37,6 +37,10 @@ glibc (2.2.93-1) unstable; urgency=low
     - Update all config options to not use --disable-sanity-checks, since we
       are actually using gcc-3.2 for everything.
     - Patch cleanups.
+    - Re-enable optimized libs. Includes a simple mechanism which should fix
+      the conflicting symbols during libc/libc-opt upgrade scenarios. This
+      means that libc6-v9, libc6-i586 and libc6-i686 are back in full swing.
+    - Remove all references to /usr/doc symlink crap, which is deprecated.
 
   * XXX Below here was during the 2.2.92 development, and never released.
 
